[package]
name = "usf"
version = "0.1.0"
edition = "2021"
authors = ["Swarms.ai"]
description = "Universal Storage Format (USF) - A next-generation, high-performance storage format"
documentation = "https://docs.rs/usf"
repository = "https://github.com/The-Swarm-Corporation/USF"
license = "Apache-2.0"
keywords = ["storage", "compression", "format", "enterprise", "data"]
categories = ["compression", "database", "filesystem"]
readme = "README.md"

[dependencies]
# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Compression
zstd = "0.13"
image = "0.24"

# Hashing and checksums
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling and utilities
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["compression"]
compression = []
encryption = []
monitoring = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[lib]
name = "usf"
path = "src/lib.rs"